[package]
name = "taser-shoes-the-game-the-videogame"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
clap = { version = "4.5.0", features = ["derive"] }
http = "1.0.0"
serde = { version = "1.0.196", features = ["derive", "rc"]}
tokio = { version = "1.36.0", features = ["full"]}
tokio-util = { version = "0.7.10", features = ["full"]}
urlencoding = "2.1.3"
warp = "0.3.6"
